[project]
name = "commi"
version = "0.1.0"
description = ""
authors = [
    {name = "Timur Valiev",email = "cptchunk@yandex.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llama-cpp-python (>=0.3.16,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
